--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
     }
   ],
   "hosting": {
-    "public": "public",
+    "public": "frontend/build",
     "ignore": [
       "firebase.json",
       "**/.*",
