--- a/functions/package.json
+++ b/functions/package.json
@@ -16,17 +16,13 @@
   "dependencies": {
     "@google-cloud/storage": "^7.17.2",
     "@google-cloud/vertexai": "^1.10.0",
-    "@sparticuz/chromium": "^131.0.0",
+    "@octokit/rest": "^20.0.2",
     "axios": "^1.13.1",
-    "cheerio": "^1.1.2",
     "firebase": "^12.5.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "google-auth-library": "^10.4.2",
-    "puppeteer-core": "^24.27.0"
-  },
-  "puppeteer": {
-    "skipDownload": false
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
