--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "@google-cloud/storage": "^7.17.2",
     "@google-cloud/vertexai": "^1.10.0",
     "@octokit/rest": "^20.0.2",
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "firebase": "^12.5.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
