--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.17.2",
     "@google-cloud/vertexai": "^1.10.0",
+    "@huggingface/transformers": "^3.8.1",
     "@octokit/rest": "^20.0.2",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
