--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID=your_project_id_here
 REACT_APP_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 REACT_APP_FIREBASE_APP_ID=your_app_id_here
+REACT_APP_API_BASE_URL=your_api_base_url_here
