feat: improve UI and add metadata
- Show all 6 parts in progress dashboard
- Add current position display on Continue Learning button
- Brighten loading message with purple theme
- Update metadata for browser tab (title, description, theme color)
- Add Open Graph and Twitter meta tags

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Flutter AI",
+  "name": "Flutter AI Chatbot",
+  "description": "Flutter 개발을 위한 AI 학습 도우미",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#667eea",
+  "background_color": "#0f0f23"
 }
