feat: migrate to 100% free stack (Vercel + Groq + Pinecone)
BREAKING CHANGE: Complete migration from Firebase/GCP to free alternatives

Backend Changes:
- Migrate from Firebase Cloud Functions to Vercel Serverless Functions
- Replace Gemini API with Groq API (free LLM)
- Replace Google text-embedding-004 with HuggingFace (free)
- Keep Pinecone for vector search (free tier)
- Fix CORS issues with explicit headers

Frontend Changes:
- Update API endpoint from Firebase to Vercel (/api/chat)
- Remove dependency on REACT_APP_API_BASE_URL

Infrastructure Changes:
- Add GitHub Actions for automated doc syncing (replaces Cloud Scheduler)
- New /api directory for Vercel Functions
- New /scripts directory for sync automation

Cost Impact:
- Previous: $26-36/month (GCP + Firebase)
- New: $0/month (100% free)

Auto-Updates:
- Weekly sync every Monday 12:00 PM KST via GitHub Actions
- No more GCP billing required

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "name": "flutter-chatbot",
+  "version": "2.0.0",
+  "description": "Flutter AI Learning Platform - 100% Free Edition",
+  "private": true,
+  "scripts": {
+    "dev": "cd frontend && npm start",
+    "build": "cd frontend && npm run build",
+    "test": "cd frontend && npm test"
+  },
   "dependencies": {
-    "@google-cloud/vertexai": "^1.10.0",
-    "axios": "^1.12.2",
-    "cheerio": "^1.1.2",
-    "firebase-admin": "^13.5.0",
-    "puppeteer": "^24.26.1"
+    "@pinecone-database/pinecone": "^6.1.4"
   }
 }
