--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,3 @@
-REACT_APP_FIREBASE_API_KEY=your_api_key_here
-REACT_APP_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
-REACT_APP_FIREBASE_PROJECT_ID=your_project_id_here
-REACT_APP_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
-REACT_APP_FIREBASE_APP_ID=your_app_id_here
-REACT_APP_API_BASE_URL=your_api_base_url_here
+# Cloudflare Worker URL (배포 후 업데이트)
+# wrangler deploy 실행 후 받은 URL로 변경
+REACT_APP_CLOUDFLARE_WORKER_URL=https://flutter-chatbot-worker.YOUR_SUBDOMAIN.workers.dev
