--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 # Cloudflare Worker URL (배포 후 업데이트)
 # wrangler deploy 실행 후 받은 URL로 변경
-REACT_APP_CLOUDFLARE_WORKER_URL=https://flutter-chatbot-worker.YOUR_SUBDOMAIN.workers.dev
+VITE_CLOUDFLARE_WORKER_URL=https://flutter-chatbot-worker.hiprojectflutterchatbot.workers.dev
