--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,10 @@
 # Cloudflare Worker URL (배포 후 업데이트)
-# wrangler deploy 실행 후 받은 URL로 변경
 VITE_CLOUDFLARE_WORKER_URL=https://flutter-chatbot-worker.hiprojectflutterchatbot.workers.dev
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
+VITE_FIREBASE_PROJECT_ID=your_project_id_here
+VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
+VITE_FIREBASE_APP_ID=your_app_id_here
