--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@octokit/rest": "^22.0.1",
     "axios": "^1.13.4",
+    "cheerio": "^1.2.0",
     "gray-matter": "^4.0.3"
   }
 }
