feat: comprehensive Flutter documentation sync with auto-updates
- Add GitHub Tree API sync script for efficient bulk sync
- Sync 370+ Flutter docs from flutter/website repository
- Add alternative sync methods (sitemap, recursive GitHub API)
- Update GitHub Actions workflow for Cloudflare Workers
- Configure weekly auto-sync every Sunday 3 AM UTC
- Update README with actual document count and setup instructions
- Add GitHub Personal Access Token support for higher rate limits

Sync results:
- Total markdown files: 676
- Successfully synced: 341 documents
- Total in database: ~370 documents (with existing)
- Success rate: 54.9% (Worker limitations on remaining)

--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -26,6 +26,7 @@
     "@octokit/rest": "^22.0.1",
     "axios": "^1.13.4",
     "cheerio": "^1.2.0",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "xml2js": "^0.6.2"
   }
 }
