--- a/.github/workflows/sync-flutter-docs.yml
+++ b/.github/workflows/sync-flutter-docs.yml
@@ -1,15 +1,22 @@
-name: Sync Flutter Docs to Pinecone
+name: Sync Flutter Documentation
 
 on:
+  # 매주 일요일 오전 3시 (UTC)
   schedule:
-    # 매주 월요일 오전 3시 (UTC) = 한국 시간 정오 12시
-    - cron: '0 3 * * 1'
-  workflow_dispatch: # 수동 실행 가능
+    - cron: '0 3 * * 0'
+
+  # 수동 트리거 가능
+  workflow_dispatch:
+    inputs:
+      sync_method:
+        description: 'Sync method (github-tree or sitemap)'
+        required: false
+        default: 'github-tree'
 
 jobs:
-  sync:
+  sync-docs:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 90
 
     steps:
       - name: Checkout repository
@@ -18,29 +25,33 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '18'
           cache: 'npm'
+          cache-dependency-path: cloudflare-worker/package-lock.json
 
       - name: Install dependencies
         run: |
-          npm install @pinecone-database/pinecone @octokit/rest axios cheerio gray-matter
+          cd cloudflare-worker
+          npm ci
 
-      - name: Run sync script
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-          HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-        run: node scripts/sync-docs.js
-
-      - name: Upload sync log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: sync-log
-          path: sync-log.txt
-          retention-days: 7
-
-      - name: Notify completion
+      - name: Run Flutter documentation sync
         run: |
-          echo "✅ Flutter docs sync completed"
-          echo "📊 Check artifacts for detailed log"
+          cd cloudflare-worker
+          node scripts/sync-github-tree.js
+        env:
+          NODE_ENV: production
+          GITHUB_TOKEN: ${{ secrets.FLUTTER_DOCS_TOKEN }}
+
+      - name: Notify on success
+        if: success()
+        run: |
+          echo "✅ Flutter documentation sync completed successfully!"
+          echo "📊 Check the logs above for details"
+          echo "🔍 Total documents synced to Vectorize"
+
+      - name: Notify on failure
+        if: failure()
+        run: |
+          echo "❌ Flutter documentation sync failed!"
+          echo "🔍 Check the logs above for error details"
+          echo "💡 You can manually trigger sync from Actions tab"
