feat: change sync schedule from weekly to daily
- Update GitHub Actions cron from weekly (Sunday) to daily
- Schedule: Every day at 3 AM UTC (12 PM KST)
- Purpose: Retry failed documents daily due to Worker CPU limits
- Gradual improvement: 366/621 docs → incrementally reach 621/621
- README updated to reflect daily sync schedule

Benefits:
- Faster initial data upload completion (days instead of weeks)
- Automatic retry for 500 error batches
- No manual intervention needed

--- a/.github/workflows/sync-flutter-docs.yml
+++ b/.github/workflows/sync-flutter-docs.yml
@@ -1,9 +1,9 @@
 name: Sync Flutter Documentation
 
 on:
-  # 매주 일요일 오전 3시 (UTC)
+  # 매일 오전 3시 (UTC) - 한국시간 정오 12시
   schedule:
-    - cron: '0 3 * * 0'
+    - cron: '0 3 * * *'
 
   # 수동 트리거 가능
   workflow_dispatch:
