feat: add multi-provider AI fallback system
Implement automatic fallback chain with 3 free AI providers:
- Priority 1: Cloudflare Workers AI (10k Neurons/day)
- Priority 2: Groq AI (14,400 requests/day)
- Priority 3: Google Gemini (60 requests/min)

Benefits:
- Total capacity: 18,200 questions/day (182 per student for 100 students)
- 9x increase from 2,000 to 18,200 daily questions
- Zero additional cost (all providers free tier)
- Automatic failover when rate limits reached
- Works without external API keys (Cloudflare only)

Implementation:
- callAIWithFallback(): Sequential fallback chain
- callCloudflareAI(), callGroqAI(), callGeminiAI(): Provider adapters
- Intelligent error handling: retry on rate limit, fail on other errors
- Optional API key configuration via wrangler secrets

Setup (optional):
1. Groq: https://console.groq.com/keys (no credit card)
2. Gemini: https://aistudio.google.com/apikey (no credit card)
3. npx wrangler secret put GROQ_API_KEY
4. npx wrangler secret put GEMINI_API_KEY

--- a/cloudflare-worker/wrangler.toml
+++ b/cloudflare-worker/wrangler.toml
@@ -21,3 +21,13 @@ database_id = "9b14e184-3c33-403a-8621-5bf649b200f8"
 # 환경 변수 (필요시)
 [vars]
 ENVIRONMENT = "production"
+
+# 외부 AI API 키 (선택사항 - fallback용)
+# 설정 방법:
+# 1. Groq: https://console.groq.com/keys 에서 무료 API 키 생성
+# 2. Gemini: https://aistudio.google.com/apikey 에서 무료 API 키 생성
+# 3. 아래 명령어로 secret 설정:
+#    npx wrangler secret put GROQ_API_KEY
+#    npx wrangler secret put GEMINI_API_KEY
+#
+# 주의: API 키는 wrangler secret으로 설정해야 하며, 이 파일에 직접 작성하지 마세요!
