chore: change daily sync schedule to 6PM KST
- Update GitHub Actions cron from 3AM UTC to 9AM UTC
- New schedule: daily at 6PM KST (9AM UTC)
- Update README documentation

--- a/.github/workflows/sync-flutter-docs.yml
+++ b/.github/workflows/sync-flutter-docs.yml
@@ -1,9 +1,9 @@
 name: Sync Flutter Documentation
 
 on:
-  # 매일 오전 3시 (UTC) - 한국시간 정오 12시
+  # 매일 오전 9시 (UTC) - 한국시간 오후 6시
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 9 * * *'
 
   # 수동 트리거 가능
   workflow_dispatch:
