refactor: remove Groq AI and improve security
- Remove Groq API provider code completely
- Add 10s timeout for Gemini API calls
- Restrict CORS to allowed origins only
- Add test-*.js to .gitignore for security
- Update Gemini model to gemini-2.0-flash

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ tech_stack.md
 firebase_config.md
 firebase-admin-key.json
 
+# Test files with sensitive data
+test-*.js
+
 # Environment files
 .env
 functions/.env
