--- a/cloudflare-worker/.env.example
+++ b/cloudflare-worker/.env.example
@@ -3,17 +3,12 @@
 
 # 외부 AI API 키 (선택사항 - Cloudflare Workers AI 리밋 초과 시 자동 fallback)
 
-# Groq API (무료 14,400 요청/일)
-# https://console.groq.com/keys 에서 생성
-GROQ_API_KEY=your_groq_api_key_here
-
 # Google Gemini API (무료 60 요청/분)
 # https://aistudio.google.com/apikey 에서 생성
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # 주의사항:
-# 1. 이 키들은 선택사항입니다. 없어도 Cloudflare Workers AI로 작동합니다.
+# 1. 이 키는 선택사항입니다. 없어도 Cloudflare Workers AI로 작동합니다.
 # 2. 프로덕션 배포 시에는 wrangler secret으로 설정하세요:
-#    npx wrangler secret put GROQ_API_KEY
 #    npx wrangler secret put GEMINI_API_KEY
 # 3. .env 파일은 절대 Git에 커밋하지 마세요 (.gitignore에 포함됨)
