feat: add incremental sync - only update changed documents
- Add sync-incremental.js for efficient updates
- Add /api/doc-hashes endpoints to store content hashes in D1
- Compare MD5 hashes to detect changes
- Update GitHub Actions to use incremental sync

Benefits:
- Sync time: 20min → 2-5min (for typical weekly updates)
- API calls: 752 → only changed docs
- More reliable with smaller batches

--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -25,11 +25,11 @@ jobs:
         working-directory: ./cloudflare-worker/scripts
         run: npm install axios cheerio xml2js
 
-      - name: Run crawler with Gemini embeddings
+      - name: Run incremental sync (changed docs only)
         working-directory: ./cloudflare-worker/scripts
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: node crawl-with-gemini.js
+        run: node sync-incremental.js
 
       - name: Notify on failure
         if: failure()
