--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-# Cloudflare Worker URL (배포 후 업데이트)
-VITE_CLOUDFLARE_WORKER_URL=https://flutter-chatbot-worker.hiprojectflutterchatbot.workers.dev
+# Supabase Backend URL (Vercel)
+VITE_CLOUDFLARE_WORKER_URL=https://supabase-backend-green.vercel.app
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_api_key_here
