chore: update API URL to flutter-chatbot.vercel.app

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # Supabase Backend URL (Vercel)
-VITE_CLOUDFLARE_WORKER_URL=https://supabase-backend-green.vercel.app
+VITE_CLOUDFLARE_WORKER_URL=https://flutter-chatbot.vercel.app
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_api_key_here
